--- a/index.html
+++ b/index.html
@@ -1,1 +1,256 @@
-Hello World!
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Brad's Portfolio</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <link rel="stylesheet" href="css/owl.carousel.min.css" />
+    <link rel="stylesheet" href="css/superslides.css" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.10.2/css/all.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css"
+    />
+    <link rel="stylesheet" href="css/style.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  </head>
+
+  <body>
+    <div id="slides">
+      <div class="overlay"></div>
+      <div class="slides-container">
+      </div>
+      <div class="titleMessage">
+        <div class="heading">
+          <p class="main">Bradley Philpott</p>
+          <p class="sub typed"></p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Navbar -->
+    <nav id="navigation" class="navbar navbar-expand-lg">
+      <a class="navbar-brand" href="#">Brad</a>
+
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="#about"
+              >About Me <span class="sr-only"></span
+            ></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#skills">Skills</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#stats">Stats</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contact">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <!-- About Me -->
+    <div id="about" class="section">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-5">
+            <img class="aboutImage" src="img/photo.jpeg" alt="" />
+          </div>
+
+          <div class="col-md-7">
+            <h4 class="aboutMe">About Me</h4>
+            <p>
+              A full-stack developer with an interest in web and app development.
+            </p>
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+            </p>
+            <p>
+              <!-- <iframe src="https://drive.google.com/file/d/11Gq9EAnil2TcmBZruu6SN157QZkY7fRS/preview" width="640" height="480" allow="autoplay"></iframe> -->
+            </p>
+          </div>
+        </div>
+        <div class="row col-md-12 iconsRow">
+          <a href="https://www.linkedin.com/in/bradley-p-1a6799130/" class="aboutIcons"><i class="fab fa-linkedin" style="font-size: 2em;"></i></a>
+          <a href="https://github.com/BradPhilpott" class="aboutIcons"><i class="fab fa-github" style="font-size: 2em;"></i></a>
+        </div>
+      </div>
+    </div>
+
+    <!-- Skills -->
+    <div id="skills" class="skillsSection section">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 text-center">
+            <h2>MY SKILLS</h2>
+            <!-- <p>My skills in web & programming languages.</p> -->
+          </div>
+
+          <div class="owl-carousel owl-theme">
+            <div class="skill">
+              <span class="chart" data-percent="80">
+                <span class="percent">80</span>
+                <canvas height="152" width="152"></canvas>
+              </span>
+              <h5>PHP/Laravel</h5>
+            </div>
+
+            <div class="skill">
+              <span class="chart" data-percent="65">
+                <span class="percent">65</span>
+                <canvas height="152" width="152"></canvas>
+              </span>
+              <h5>JavaScript/React.js</h5>
+            </div>
+
+            <div class="skill">
+              <span class="chart" data-percent="70">
+                <span class="percent">70</span>
+                <canvas height="152" width="152"></canvas>
+              </span>
+              <h5>HTML/CSS/jQuery</h5>
+            </div>
+
+            <div class="skill">
+              <span class="chart" data-percent="90">
+                <span class="percent">90</span>
+                <canvas height="152" width="152"></canvas>
+              </span>
+              <h5>MySQL/Relational Databases</h5>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Stats -->
+    <div id="stats" class="statsSection section">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-3 col-sm-6">
+            <div class="squareItem">
+              <div class="squareInnerContainer">
+                <div class="squareIcon">
+                  <i class="fas fa-globe"></i>
+                </div>
+                <div class="squareContent">
+                  <h2 class="counter">n/a</h2>
+                  <h3>Projects Done</h3>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-3 col-sm-6">
+            <div class="squareItem">
+              <div class="squareInnerContainer">
+                <div class="squareIcon">
+                  <i class="fas fa-address-book"></i>
+                </div>
+                <div class="squareContent">
+                  <h2 class="counter">n/a</h2>
+                  <h3>Skill 2</h3>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-3 col-sm-6">
+            <div class="squareItem">
+              <div class="squareInnerContainer">
+                <div class="squareIcon">
+                  <i class="fa fa-coffee"></i>
+                </div>
+                <div class="squareContent">
+                  <h2 class="counter">999999</h2>
+                  <h3>Skill 3</h3>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-3 col-sm-6">
+            <div class="squareItem">
+              <div class="squareInnerContainer">
+                <div class="squareIcon">
+                  <i class="fas fa-robot"></i>
+                </div>
+                <div class="squareContent">
+                  <h2 class="counter">n/a</h2>
+                  <h3>Bots Created</h3>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Contact -->
+    <div id="contact" class="contactSection section">
+      <div class="col-md-12 text-center">
+        <!-- <p class="subHeading">Do you want to contact me?</p> -->
+        <h2>Send an email now.</h2>
+        <a href="mailTo:bradphilpott18@gmail.com" class="contactButton"
+          >Contact me!</a
+        >
+      </div>
+    </div>
+
+    <!-- Copyright -->
+
+    <!-- <div class="copyrightSection">
+      <div class="col-md-12 text-center">
+        <p>
+          Copyright &copy; <script>document.write( new Date().getFullYear() );</script> some rights reserved | 85% of website was made
+          by Brad
+        </p>
+      </div>
+    </div> -->
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/countup.js/1.8.2/countUp.min.js"></script>
+    <script src="js/countUp-jquery.js"></script>
+    <script src="js/jquery.superslides.min.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
+    <script src="js/jquery.easypiechart.min.js"></script>
+    <script src="js/typed.min.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      type="text/javascript"
+      src="https://unpkg.com/isotope-layout@3.0.6/dist/isotope.pkgd.min.js"
+    ></script>
+    <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
+    <script src="js/script.js"></script>
+  </body>
+</html>
