--- a/index.html
+++ b/index.html
@@ -4,41 +4,17 @@
     <title>Brad's Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <link rel="stylesheet" href="css/owl.carousel.min.css" />
-    <link rel="stylesheet" href="css/superslides.css" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.10.2/css/all.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css"
-    />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.4.0/css/all.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/slideshow.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   </head>
 
   <body>
-    <div id="slides">
-      <div class="overlay"></div>
-      <div class="slides-container">
-      </div>
-      <div class="titleMessage">
-        <div class="heading">
-          <p class="main">Bradley Philpott</p>
-          <p class="sub typed"></p>
-        </div>
-      </div>
-    </div>
-
     <!-- Navbar -->
     <nav id="navigation" class="navbar navbar-expand-lg">
-      <a class="navbar-brand" href="#">Brad</a>
-
       <button
         class="navbar-toggler"
         type="button"
@@ -53,182 +29,110 @@
 
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="#about"
-              >About Me <span class="sr-only"></span
-            ></a>
-          </li>
           <li class="nav-item">
-            <a class="nav-link" href="#skills">Skills</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#stats">Stats</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#contact">Contact</a>
+            <a class="nav-link" href="#projects">PROJECTS</a>
           </li>
         </ul>
       </div>
     </nav>
 
-    <!-- About Me -->
-    <div id="about" class="section">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-5">
-            <img class="aboutImage" src="img/photo.jpeg" alt="" />
-          </div>
-
-          <div class="col-md-7">
-            <h4 class="aboutMe">About Me</h4>
-            <p>
-              A full-stack developer with an interest in web and app development.
-            </p>
-            <p>
-              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-            </p>
-            <p>
-              <!-- <iframe src="https://drive.google.com/file/d/11Gq9EAnil2TcmBZruu6SN157QZkY7fRS/preview" width="640" height="480" allow="autoplay"></iframe> -->
-            </p>
-          </div>
-        </div>
-        <div class="row col-md-12 iconsRow">
+    <div id="slides">
+      <div class="overlay"></div>
+      <div class="slides-container">
+      </div>
+      <div class="titleMessage">
+        <div class="heading">
           <a href="https://www.linkedin.com/in/bradley-p-1a6799130/" class="aboutIcons"><i class="fab fa-linkedin" style="font-size: 2em;"></i></a>
           <a href="https://github.com/BradPhilpott" class="aboutIcons"><i class="fab fa-github" style="font-size: 2em;"></i></a>
+          <p class="sub">Full-Stack Developer</p>
+          <p class="main">Bradley Philpott</p>
+          <p class="sub typed"></p>
         </div>
       </div>
     </div>
 
-    <!-- Skills -->
-    <div id="skills" class="skillsSection section">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12 text-center">
-            <h2>MY SKILLS</h2>
-            <!-- <p>My skills in web & programming languages.</p> -->
-          </div>
+    <!-- Project -->
+    <div class="app">
+      <div id="projects" class="section">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-7">
 
-          <div class="owl-carousel owl-theme">
-            <div class="skill">
-              <span class="chart" data-percent="80">
-                <span class="percent">80</span>
-                <canvas height="152" width="152"></canvas>
-              </span>
-              <h5>PHP/Laravel</h5>
+
+              <div class="slideshow-container">
+                <div class="mySlides1">
+                  <img src="https://github.com/BradPhilpott/ticket-app/assets/35923773/4efa9562-b23f-47eb-becd-d4ddea780f45" style="width:100%">
+                </div>
+              
+                <div class="mySlides1">
+                  <img src="https://github.com/BradPhilpott/ticket-app/assets/35923773/42942724-1b01-4100-b86a-99f9f83d0028" style="width:100%">
+                </div>
+
+                <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+                <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+              </div>
             </div>
 
-            <div class="skill">
-              <span class="chart" data-percent="65">
-                <span class="percent">65</span>
-                <canvas height="152" width="152"></canvas>
-              </span>
-              <h5>JavaScript/React.js</h5>
-            </div>
-
-            <div class="skill">
-              <span class="chart" data-percent="70">
-                <span class="percent">70</span>
-                <canvas height="152" width="152"></canvas>
-              </span>
-              <h5>HTML/CSS/jQuery</h5>
-            </div>
-
-            <div class="skill">
-              <span class="chart" data-percent="90">
-                <span class="percent">90</span>
-                <canvas height="152" width="152"></canvas>
-              </span>
-              <h5>MySQL/Relational Databases</h5>
+            <div class="col-md-5">
+                <h4>Ticketing System</h4>
+              <p>
+                <a href="https://github.com/BradPhilpott/ticket-app" target="_blank">
+                    Source Code
+                </a>
+                <br />
+                <a href="project/ticket-app.html">
+                    More Information
+                </a>
+              </p>
+              <p>
+                A ticket system where users can assign tickets to suppliers. Tickets contain cost, dates, details and a link to a geographical location <a href="project/ticket-app.html">...</a>
+              </p>
+              <p>
+              </p>
             </div>
           </div>
         </div>
       </div>
-    </div>
 
-    <!-- Stats -->
-    <div id="stats" class="statsSection section">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-3 col-sm-6">
-            <div class="squareItem">
-              <div class="squareInnerContainer">
-                <div class="squareIcon">
-                  <i class="fas fa-globe"></i>
+      <div class="section">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-7">
+
+
+              <div class="slideshow-container">
+                <div class="mySlides2">
+                  <img src="https://github.com/BradPhilpott/ticket-app/assets/35923773/4efa9562-b23f-47eb-becd-d4ddea780f45" style="width:100%">
                 </div>
-                <div class="squareContent">
-                  <h2 class="counter">n/a</h2>
-                  <h3>Projects Done</h3>
+              
+                <div class="mySlides2">
+                  <img src="https://github.com/BradPhilpott/ticket-app/assets/35923773/42942724-1b01-4100-b86a-99f9f83d0028" style="width:100%">
                 </div>
+
+                <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+                <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
               </div>
             </div>
-          </div>
 
-          <div class="col-md-3 col-sm-6">
-            <div class="squareItem">
-              <div class="squareInnerContainer">
-                <div class="squareIcon">
-                  <i class="fas fa-address-book"></i>
-                </div>
-                <div class="squareContent">
-                  <h2 class="counter">n/a</h2>
-                  <h3>Skill 2</h3>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-3 col-sm-6">
-            <div class="squareItem">
-              <div class="squareInnerContainer">
-                <div class="squareIcon">
-                  <i class="fa fa-coffee"></i>
-                </div>
-                <div class="squareContent">
-                  <h2 class="counter">999999</h2>
-                  <h3>Skill 3</h3>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-3 col-sm-6">
-            <div class="squareItem">
-              <div class="squareInnerContainer">
-                <div class="squareIcon">
-                  <i class="fas fa-robot"></i>
-                </div>
-                <div class="squareContent">
-                  <h2 class="counter">n/a</h2>
-                  <h3>Bots Created</h3>
-                </div>
-              </div>
+            <div class="col-md-5">
+              <a href="project/ticket-app.html">
+                <h4>Project 2</h4>
+              </a>
+              <p>
+                <a href="project/ticket-app.html">
+                    Source Code
+                </a>
+              </p>
+              <p>
+                App Desc...
+              </p>
+              <p>
+              </p>
             </div>
           </div>
         </div>
       </div>
     </div>
-
-    <!-- Contact -->
-    <div id="contact" class="contactSection section">
-      <div class="col-md-12 text-center">
-        <!-- <p class="subHeading">Do you want to contact me?</p> -->
-        <h2>Send an email now.</h2>
-        <a href="mailTo:bradphilpott18@gmail.com" class="contactButton"
-          >Contact me!</a
-        >
-      </div>
-    </div>
-
-    <!-- Copyright -->
-
-    <!-- <div class="copyrightSection">
-      <div class="col-md-12 text-center">
-        <p>
-          Copyright &copy; <script>document.write( new Date().getFullYear() );</script> some rights reserved | 85% of website was made
-          by Brad
-        </p>
-      </div>
-    </div> -->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/countup.js/1.8.2/countUp.min.js"></script>
     <script src="js/countUp-jquery.js"></script>
@@ -252,5 +156,6 @@
     ></script>
     <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
     <script src="js/script.js"></script>
+    <script src="js/slideshow.js"></script>
   </body>
 </html>
